--- a/index.html
+++ b/index.html
@@ -9,15 +9,30 @@
   <body>
     <div class="profile-card">
       <img
-        src="profile-picture.jpg"
+        src="images/picture.jpeg"
         alt="Profile Picture"
         class="profile-img"
       />
-      <div class="name">John Doe</div>
-      <div class="job-title">Software Engineer</div>
+      <div class="name">Opeyemi Mercy Lawan</div>
+      <div class="job-title">Business Analyst</div>
       <div class="description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod
-        magna ut sem convallis, vel dapibus justo malesuada.
+        I am a business analyst and I majored in financial management, I am an
+        athlete, I am also a tech newbie fascinated with UI/UX and web
+        development. I do loads of hand craft designs in my leisure. I am
+        passionate about strategic problem-solving, critical thinking,
+        Inclusiveness, emotional intelligence, implementing change, to name a
+        few. With more than 2years plus experience in customer service. I am
+        dedicated to utilizing statistically proven approaches, emotional
+        intelligence, scientific literacy, and problem-solving skills to
+        effectively navigate around customers/clients. My dedication to
+        excellence, not just in sports information has elevated standards and
+        inspired others. My analytical prowess, strong mathematical abilities,
+        and problem-solving skills have led to innovative solutions in not just
+        sports information management but also as an analyst. My excellent
+        communication skills, proficiency in articulating complex concepts, and
+        mastery in stats and bookkeeping foster organizational efficiency and
+        uphold integrity. These outstanding contributions and dedication have
+        set me apart in my field.
       </div>
     </div>
   </body>
