--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="profile-card">
       <div class="profile-picture">
         <img
-          src="images/Profile pix resized.jpg"
+          src="images/resized picture.jpg"
           alt="id image"
           id="Profileimage"
         />
